# studybuddy-backend

./: .env.local  .gitignore  AGENTS.md  CLAUDE.md  README.md  chunks.json  chunks.json.  docker-compose.yaml  pyproject.toml  requirements.txt
.agent/: README.md
.agent/System/: agentos_testing.md  database_schema.md  lecture_chunk_pipeline.md  mcp_server.md  project_architecture.md  slide_chunk_pipeline.md
.agent/Tasks/: ai_sdk_nextjs_bridge_plan.md  codebase_cleanup_plan.md  critical_security_fixes_handoff.md  frontend_chat_integration.md  pdf_vector_pipeline_plan.md  studybuddy_initial_phase.md
.agent/specs/: README.md  architecture.md  database-schema.md  document-processing.md  lecture-chunking.md  mcp-server.md  message-sources-persistence.md  tech-stack.md
.agent/tasks/: audio_only_downloads_with_auth.md  chat_persistence_backend.md
.gemini/: settings.json
app/: __init__.py  auth.py  config.py  db.py  documents_service.py  downloader.py  lectures_service.py  main.py  models.py  panopto_downloader.py  schemas.py  storage.py  users_service.py  utils.py
app/adapters/: __init__.py  vercel_stream.py
app/agents/: __init__.py  chat_agent.py  context_formatter.py  knowledge_builder.py  pdf_description_agent.py
app/api/: __init__.py  auth.py
app/core/: __init__.py  config.py
app/database/: __init__.py  db.py  models.py
app/mcp/: __init__.py  server.py
scripts/: copy_transcript_text.py  extract_pdf_slides.py  generate_slide_chunks.py  query_lecture_chunks.py  run_agno_migrations.py  run_migrations.sh  sync_courses.py  test_transcription.py
(+26 files in other folders)
